--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     </style>
   </head>
   <body>
+    <a href="https://www.freecounterstat.com" title="hit counter"><img src="https://counter3.stat.ovh/private/freecounterstat.php?c=sn6jwrrafupdbj81u9nujfrxb9ybtebf" border="0" title="hit counter" alt="hit counter"></a>
+
+    
     <br />
     <br />
     <br />
