--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <br /><br />
       <br /><br />
       <br /><br />
-      <button onclick="clickMe()">Click here to begin</button>
+      <!-- <button onclick="clickMe()">Click here to begin</button> -->
+      <button ><a href = "https://youtu.be/dQw4w9WgXcQ">Click here</a></button>
     </center>
 
     <script>
