--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <br />
     <br />
     <center>
-      <h2>Age Miracle</h2>
+      <h2>Predict my future</h2>
       <br /><br />
       <br /><br />
       <br /><br />
       <!-- <button onclick="clickMe()">Click here to begin</button> -->
-      <button ><a href = "https://youtu.be/dQw4w9WgXcQ">Click here</a></button>
+      <button ><a href = "https://youtu.be/dQw4w9WgXcQ">start predicting</a></button>
     </center>
 
     <script>
